--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Revision history for Perl extension Graph::Easy::Marpa.
 
+1.02  Thu Jul 21 13:37:00 2011
+	  - Change colors so they're compatible with both the X11 and SVG color schemes.
+ 	  - Require GraphViz2 V 1.09 to have access to output image formats such as png:gd etc.
+
 1.01  Wed Jul 20 14:24:00 2011
 	  - Remove the restriction that anonymous nodes had to have at least 1 space in their name.
 
