--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,13 @@
 Revision history for Perl extension Graph::Easy::Marpa.
 
+1.05  Tue Aug  2 15:32:00 2011
+	  - Add File::Slurp to Build.PL and Makefile.PL because its readdir() method is used in t/cooked.t and t/raw.t.
+	  - Add http://metacpan.org/ link to html/graph.easy.index.tx, so it appears in html/index.html.
+	  - Clean up confusion between demo output being png or svg. The demo files uploaded to my web site used to be png,
+	  	because one of the outputs (graph.15.*) was empty (for some reason) when svg is used.
+		But since svg files are smaller than png files, and everything works, svg is used again.
+	  - Add DOCTYPE and Content-Type to html/graph.easy.index.tx, so that html/index.html validates as XHTML 1.0 Transitional.
+
 1.04  Fri Jul 29 14:12:00 2011
 	  - Make scripts/gem.pl pass rankdir thru to parser.
 	  - Make scripts/generate.demo.sh pass image type thru to scripts/generate.demo.pl.
