--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,12 @@
 Revision history for Perl extension Graph::Easy::Marpa.
 
+1.10  Tue Oct 16 09:49:00 2012
+	- Fix a bug in the lexer where it used to combine multiple lines in the input file by, basically, using
+		join('', <IN>), which meant the last char of a line was juxtaposed with the first char of the next
+		line. If the second line started with spaces, that was ok, but if it started with, say, the name of
+		a node, then that name was concatenated with what could have been a node name on the end of a previous
+		line. This meant 2 separate node names sometimes became one.
+
 1.09  Mon Jun 25 14:10:00 2012
 	- Handle HTML-style labels, even if they contain ';' chars, e.g. by using HTML entities such as &lt;.
 	- Add matching test files data/node.(17, 18, 19).(raw, cooked). See also the demo page.
